feat: final updates
